<resources>
    <string name="app_name">WeatherStation</string>

    <string name="currTemp">Temperature</string>
    <string name="currTempMin">Min. Temp.</string>
    <string name="currTempMax">Max. Temp.</string>
    <string name="currPress">Pressure</string>
    <string name="currPressMin">Min. Press.</string>
    <string name="currPressMax">Max. Press.</string>
    <string name="currHumid">Humidity</string>
    <string name="currHumidMin">Min. Hum.</string>
    <string name="currHumidMax">Max. Hum</string>
    <string name="currHour">Hour</string>
    <string name="hourOfDay">of Day</string>
    <string name="currMonth">Last 31 days</string>
    <string name="currCont">Continuous</string>
    <string name="tempSign" translatable="false">&#176;C</string>
    <string name="tempSignF" translatable="false">&#176;F</string>
    <string name="tempSignK" translatable="false">K</string>
    <string name="pressSign" translatable="false">mBar</string>
    <string name="pressSignI" translatable="false">inHg</string>
    <string name="pressSignK" translatable="false">kPa</string>
    <string name="pressSignA" translatable="false">atm</string>
    <string name="pressSignT" translatable="false">Torr</string>
    <string name="pressSignP" translatable="false">psi</string>
    <string name="pressSignH" translatable="false">hPa</string>
    <string name="pressSignM" translatable="false">mmHg</string>
    <string name="humidSign" translatable="false">%</string>
    <string name="milliAmpere" translatable="false">mA</string>
    <string name="milliSecond" translatable="false">ms</string>
    <string name="waitForSensor">Query sensor</string>
    <string name="sensorNotAvail">Sensor not available</string>
    <string name="noData">No records available</string>
    <string name="errorExportTitle">Export error</string>
    <string name="errorExport">Could not export data to CSV file. Check if your SD card is inserted and that you have sufficient space left.</string>
    <string name="succExportTitle">Export successful</string>
    <string name="succExport">Data exported to CSV file. The file name is %1$s.</string>
    <string name="errorBackupTitle">Backup error</string>
    <string name="errorBackup">Could not backup data to JSON file. Check if your SD card is inserted and that you have sufficient space left.</string>
    <string name="succBackupTitle">Backup successful</string>
    <string name="succBackup">Data backed up to JSON file. The file is name is %1$s.</string>
    <string name="errorRestoreTitle">Restore error</string>
    <string name="errorRestore">Could not restore data to database. Maybe the file was corrupted. Please try to restore from another backup file.</string>
    <string name="succRestoreTitle">Restore successful</string>
    <string name="succRestore">Data restored from %1$s to database.</string>
    <string name="noRestoreFile">Could not find any backup file. You need to do backup before you can restore data.</string>
    <string name="noFileSelected">Please select a file from which you want to restore the data.</string>
    <string name="bRestore">Restore</string>
    <string name="restoreFileTitle">Available backup files</string>
    <string name="themeBlue">Blue</string>
    <string name="themeGreen">Green</string>
    <string name="themeGray">Grey</string>
    <string name="themeOrange">Orange</string>
    <string name="themeRed">Red</string>
    <string name="themeWhite">White</string>
    <string name="clearTitle">Clear recorded data</string>
    <string name="clearText">Do you really want to delete all recorded data?</string>
    <string name="upTendency">&#x25B2;</string>
    <string name="downTendency">&#x25BC;</string>
    <string name="straightTendency">&#x25B6;</string>

    <!-- Drawer messages -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sbExport">Export records</string>
    <string name="sbBackup">Backup records</string>
    <string name="sbRestore">Restore records</string>
    <string name="sbClear">Clear recorded data</string>
    <string name="sbSensorInfo">Sensor info</string>
    <string name="sbTempInfo">Temperature sensor</string>
    <string name="sbPressInfo">Pressure sensor</string>
    <string name="sbHumidInfo">Humidity sensor</string>
    <string name="sbSettings">Settings</string>
    <string name="sbTempUnits">Temperature units</string>
    <string name="sbPressUnits">Pressure units</string>
    <string name="sbScreenUpdate">Screen update rate</string>
    <string name="sbThemes">Theme</string>

    <!-- Dialog text -->
    <string name="tvSensorTypeTemp">Temperature sensor</string>
    <string name="tvSensorTypePressure">Pressure sensor</string>
    <string name="tvSensorTypeHumidity">Humidity sensor</string>
    <string name="androidName">Name:</string>
    <string name="vendorName">Vendor:</string>
    <string name="sensorResolution">Resolution:</string>
    <string name="sensorType">Type:</string>
    <string name="sensorPower">Power:</string>
    <string name="sensorVersion">Version:</string>
    <string name="sensorRate">Update time:</string>
    <string name="delFileTitle">Delete backup file</string>
    <string name="delFileText">Do you want to delete %1$s?</string>

    <!-- Google adMob -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Widget configuration -->
    <string name="tvWidgetMaxText">320</string>
    <string name="tvWidgetAvgText">300</string>
    <string name="tvWidgetMinText">280</string>
    <string name="tvTime">00:00</string>
    <string name="tvDate">22 May Fri</string>
    <string name="tvWidgetTypeTxt">Select widget type</string>
    <string name="rbWtype1">1 row</string>
    <string name="rbWtype2">2 row</string>
    <string name="rbWtype3">3 row</string>
    <string name="tvWvalueSel">Select measure to show</string>
    <string name="tvWvalueRow1">Row 1</string>
    <string name="tvWvalueRow2">Row 2</string>
    <string name="tvWvalueRow3">Row 3</string>
    <string name="tvWupdate">Select refresh interval</string>
    <string name="rbWupd1">1 min</string>
    <string name="rbWupd2">5 min</string>
    <string name="rbWupd3">10 min</string>
    <string name="rbWupd4">30 min</string>
    <string name="configErrorHead">Error</string>
    <string name="configErrorPos1">You selected Temperature already in another row. Select another measure.</string>
    <string name="configErrorPos2">You selected Pressure already in another row. Select another measure.</string>
    <string name="configErrorPos3">You selected Humidity already in another row. Select another measure.</string>
    <string name="configError">You need to selected at least one measure.</string>

</resources>
