<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_press1">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSign"
            android:id="@+id/rb_mBar"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:checked="true"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignP"
            android:id="@+id/rb_psi"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignA"
            android:id="@+id/rb_atm"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignT"
            android:id="@+id/rb_Torr"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_press2">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignK"
            android:id="@+id/rb_kPa"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignH"
            android:id="@+id/rb_hPa"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignM"
            android:id="@+id/rb_mmHg"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressSignI"
            android:id="@+id/rb_inHg"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:drawableEnd="@android:drawable/btn_radio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </RadioGroup>

</LinearLayout>
