<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              style="@style/AppTheme_Gray.Base">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvWidgetTypeTxt"
        android:id="@+id/tvWidgetType"
        android:layout_gravity="center_horizontal"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgWidgetType">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWtype1"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWtype1"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWtype2"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWtype2"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWtype3"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWtype3"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:id="@+id/vWCDivider1"
        android:layout_margin="5dp"
        android:background="@color/my_gray_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvWvalueSel"
        android:id="@+id/tvWvalueSel"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvWvalueRow1"
            android:id="@+id/tvWvalueRow1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spWrow1"
            android:entries="@array/widgetRowValues"
            android:prompt="@string/tvWvalueRow1"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvWvalueRow2"
            android:id="@+id/tvWvalueRow2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spWrow2"
            android:entries="@array/widgetRowValues"
            android:prompt="@string/tvWvalueRow2"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvWvalueRow3"
            android:id="@+id/tvWvalueRow3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spWrow3"
            android:entries="@array/widgetRowValues"
            android:prompt="@string/tvWvalueRow3"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:id="@+id/vWCDivider2"
        android:layout_margin="5dp"
        android:background="@color/my_gray_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvWupdate"
        android:id="@+id/tvWupdate"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rgWidgetUpdate">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWupd1"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWupd1"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWupd2"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWupd2"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWupd3"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWupd3"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWupd4"
            android:checked="false"
            android:layout_weight="1"
            android:text="@string/rbWupd4"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"/>

    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:id="@+id/vWCDivider3"
        android:layout_margin="5dp"
        android:background="@color/my_gray_dark"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/bWcancel"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/bWadd"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>
