<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/round_corner_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvWidgetMaxText"
        android:id="@+id/tv_widgetMaxValue"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tempSignK"
        android:id="@+id/tv_widgetMaxSign"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetMaxValue"
        android:layout_toEndOf="@+id/tv_widgetMaxValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/upTendency"
        android:id="@+id/tv_widgetMaxTend"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetMaxSign"
        android:layout_toEndOf="@+id/tv_widgetMaxSign"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvWidgetAvgText"
        android:id="@+id/tv_widgetValue"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_widgetMaxValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tempSignK"
        android:id="@+id/tv_widgetSign"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetValue"
        android:layout_toEndOf="@+id/tv_widgetValue"
        android:layout_below="@+id/tv_widgetMaxValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/straightTendency"
        android:id="@+id/tv_widgetTend"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetSign"
        android:layout_toEndOf="@+id/tv_widgetSign"
        android:layout_below="@+id/tv_widgetMaxValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvWidgetMinText"
        android:id="@+id/tv_widgetMinValue"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_widgetValue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tempSignK"
        android:id="@+id/tv_widgetMinSign"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetMinValue"
        android:layout_toEndOf="@+id/tv_widgetMinValue"
        android:layout_below="@+id/tv_widgetSign"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/downTendency"
        android:id="@+id/tv_widgetMinTend"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_widgetMinSign"
        android:layout_toEndOf="@+id/tv_widgetMinSign"
        android:layout_below="@+id/tv_widgetTend"/>

</RelativeLayout>
